tests/script_errors/pp_unrecognized_token4/error.txt
Error: 
    1 | use foo :: :; bar;
      |            ^ Found the token `:` but expected one of `<ident>`, `{`
      |              NOTE: Did you mean to use `{`?